Make markup XHTML 1.0 compliant. By Andrea 'Fyre Wyzard' Bocci <fwyzard@inwind.it>.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -8,21 +8,23 @@
 <h1>GCC 3.1 Changes, New Features, and Fixes</h1>
 
 <ul>
-  <li>General Optimizer Improvements</li>
+  <li>General Optimizer Improvements
   <ul>
     <li>dummy</li>
   </ul>
-
+  </li>
+  
   <li>New Languages and Language specific improvements</li>
 
-  <li>New Targets and Target Specific Improvements</li>
+  <li>New Targets and Target Specific Improvements
   <ul>
     <li><a href="http://www.suse.com">SuSE Labs</a> developers Jan
     Hubicka, Bo Thorsen and Andreas Jaeger have contributed a port to
     the AMD x86-64 architecture.  For more information on x86-64 see
     <a href="http://www.x86-64.org">http://www.x86-64.org</a>.</li>
   </ul>
-     
+  </li>
+    
   <li>Documentation improvements</li>
 
   <li>Other significant improvements</li>
