--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -39,19 +39,24 @@ possible.</p>
 
 <p>GCC 3.1 will contain considerable improvements in functionality
 relative to previous releases of GCC.  Each of these improvements must
-be completed before GCC 3.1 is released:
+be completed before GCC 3.1 is released:</p>
 <ul>
 <li><p>Open Bugs</p>
     <p>High-priority open bugs in GNATS will be fixed before the
        GCC 3.1 release.</p>
+</li>
 <li><p>C preprocessor</p>
     <p></p>
+</li>
 <li><p>C++ ABI</p>
     <p></p>
+</li>
 <li><p>C++ Standard Library</p>
     <p></p>
+</li>
 <li><p>Java Standard Library</p>
     <p></p>
+</li>
 </ul>
 
 <h2>Platform Support</h2>
@@ -65,14 +70,14 @@ possible, the release will support other targets as well.</p>
 
 <table align="center">
 <caption>Primary Evaluation Platforms</caption>
-<tr><th>Chip     <th>OS                  <th>Triplet
-<tr><td>Alpha    <td>RedHat Linux 6.2    <td>
-<tr><td>HPPA     <td>HPUX 11.0           <td>hppa2.0w-hp-hpux11.00
-<tr><td>Intel x86<td>Debian GNU/Linux 2.2<td>i386-pc-linux-gnu
-<tr><td>Intel x86<td>RedHat Linux 6.2    <td>i686-pc-linux-gnu
-<tr><td>MIPS     <td>IRIX 6.5            <td>mips-sgi-irix6.5
-<tr><td>PowerPC  <td>AIX 4.3.3           <td>powerpc-ibm-aix4.3.3.0
-<tr><td>SPARC    <td>Solaris 2.7         <td>sparc-sun-solaris2.7
+<tr><th>Chip</th>     <th>OS</th>                  <th>Triplet</th></tr>
+<tr><td>Alpha</td>    <td>RedHat Linux 6.2</td>    <td></td></tr>
+<tr><td>HPPA</td>     <td>HPUX 11.0</td>           <td>hppa2.0w-hp-hpux11.00</td></tr>
+<tr><td>Intel x86</td><td>Debian GNU/Linux 2.2</td><td>i386-pc-linux-gnu</td></tr>
+<tr><td>Intel x86</td><td>RedHat Linux 6.2</td>    <td>i686-pc-linux-gnu</td></tr>
+<tr><td>MIPS</td>     <td>IRIX 6.5</td>            <td>mips-sgi-irix6.5</td></tr>
+<tr><td>PowerPC</td>  <td>AIX 4.3.3</td>           <td>powerpc-ibm-aix4.3.3.0</td></tr>
+<tr><td>SPARC</td>    <td>Solaris 2.7</td>         <td>sparc-sun-solaris2.7</td></tr>
 </table>
 
 <p>GCC's performance on the following platforms will not be required
@@ -102,15 +107,15 @@ answering questions and reviewing patches as time permits.</p>
 
 <table align="center">
 <caption>Secondary Evaluation Platforms</caption>
-<tr><th>Chip     <th>OS                  <th>Triplet
-    <th>Tester
-<tr><td>Intel x86<td>FreeBSD 4.2         <td>i386-unknown-freebsd4.2
-    <td><a href="mailto:obrien@freebsd.org">David O'Brien</a></td>
-<tr><td>PowerPC  <td>GNU/Linux           <td>
-<tr><td>SPARC    <td>Debian GNU/Linux 2.2<td>sparc-sun-linux-gnu
-    <td><a href="mailto:bcollins@debian.org">Ben Collins</a>
-<tr><td>ARM      <td>GNU/Linux           <td>armv4l-unknown-linux-gnu
-<tr><td>Intel x86<td>Cygwin              <td>i686-pc-cygwin
+<tr><th>Chip</th>     <th>OS</th>                  <th>Triplet</th>
+    <th>Tester</th></tr>
+<tr><td>Intel x86</td><td>FreeBSD 4.2</td>         <td>i386-unknown-freebsd4.2</td>
+    <td><a href="mailto:obrien@freebsd.org">David O'Brien</a></td></tr>
+<tr><td>PowerPC</td>  <td>GNU/Linux</td>           <td></td></tr>
+<tr><td>SPARC</td>    <td>Debian GNU/Linux 2.2</td><td>sparc-sun-linux-gnu</td>
+    <td><a href="mailto:bcollins@debian.org">Ben Collins</a></td></tr>
+<tr><td>ARM</td>      <td>GNU/Linux</td>           <td>armv4l-unknown-linux-gnu</td></tr>
+<tr><td>Intel x86</td><td>Cygwin</td>              <td>i686-pc-cygwin</td></tr>
 </table>
 
 <h2>Language Support</h2>
@@ -119,9 +124,9 @@ answering questions and reviewing patches as time permits.</p>
 this release, only the behavior of front-ends for the following
 languages will be considered part of the release criteria:</p>
 <ul>
-<li>C
-<li>C++
-<li>Fortran
+<li>C</li>
+<li>C++</li>
+<li>Fortran</li>
 </ul>
 
 <p>The following languages will be supported by the release, but their
@@ -129,9 +134,9 @@ behavior will not be a primary consideration in determining whether or
 not to ship a particular release candidate:</p>
 
 <ul>
-<li>Ada
-<li>Java
-<li>Objective-C
+<li>Ada</li>
+<li>Java</li>
+<li>Objective-C</li>
 </ul>
 
 <p>In particular, no application testing, code quality, or compile-time
@@ -165,65 +170,76 @@ different programming languages.</p>
 
 <table align="center">
 <caption>Integration Tests</caption>
-<tr><th>Name
-    <th>Language
-    <th>Version
-    <th>Source URL
-<tr><td><a href="http://www.kernel.org">Linux kernel</a>
-    <td>C
-    <td>2.4.0
+<tr><th>Name</th>
+    <th>Language</th>
+    <th>Version</th>
+    <th>Source URL</th>
+</tr>
+<tr><td><a href="http://www.kernel.org">Linux kernel</a></td>
+    <td>C</td>
+    <td>2.4.0</td>
     <td><a
     href="ftp://ftp.kernel.org/pub/linux/kernel/v2.4/linux-2.4.0.tar.gz">
-    linux-2.4.0.tar.gz</a>
-<tr><td><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a>
-    <td>C
-    <td>20.6
-    <td>
-<tr><td><a href="http://www.acl.lanl.gov/pooma/">POOMA</a>
-    <td>C++
-    <td>2.2.0
+    linux-2.4.0.tar.gz</a></td>
+</tr>
+<tr><td><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a></td>
+    <td>C</td>
+    <td>20.6</td>
+    <td></td>
+</tr>
+<tr><td><a href="http://www.acl.lanl.gov/pooma/">POOMA</a></td>
+    <td>C++</td>
+    <td>2.2.0</td>
     <td><a href="http://www.acl.lanl.gov/distributions/pooma-2.3.0.tgz">
-        pooma-2.3.0.tgz</a>
-<tr><td><a href="http://www.oonumerics.org/blitz/">Blitz</a>
-    <td>C++
-    <td>20001213
+        pooma-2.3.0.tgz</a></td>
+</tr>
+<tr><td><a href="http://www.oonumerics.org/blitz/">Blitz</a></td>
+    <td>C++</td>
+    <td>20001213</td>
     <td><a href="http://www.oonumerics.org/blitz/download/snapshots/blitz-20001213.tar.gz">
-        blitz-20001213.tar.gz</a>
-<tr><td><a href="http://www.boost.org/">Boost</a>
-    <td>C++
-    <td>1.22.0 <!-- the download link they give here isn't versioned... -->
+        blitz-20001213.tar.gz</a></td>
+</tr>
+<tr><td><a href="http://www.boost.org/">Boost</a></td>
+    <td>C++</td>
+    <td>1.22.0</td> <!-- the download link they give here isn't versioned... -->
     <td><a href="http://www.boost.org/boost_all.tar.gz">
-        boost_all.tar.gz</a>
-<tr><td><a href="http://root.cern.ch/">root</a>
-    <td>C++
-    <td>3.01.00
+        boost_all.tar.gz</a></td>
+</tr>
+<tr><td><a href="http://root.cern.ch/">root</a></td>
+    <td>C++</td>
+    <td>3.01.00</td>
     <td><a href="http://root.cern.ch/root/Version301.html">
-        root-3.01</a>
-<tr><td><a href="">pooma-gcc</a>
-    <td>C++
-    <td>?
+        root-3.01</a></td>
+</tr>
+<tr><td><a href="">pooma-gcc</a></td>
+    <td>C++</td>
+    <td>?</td>
     <td><a href="">
-        ?</a>
-<tr><td><a href="">MTL</a>
-    <td>C++
-    <td>2.12.2.-19
+        ?</a></td>
+</tr>
+<tr><td><a href="">MTL</a></td>
+    <td>C++</td>
+    <td>2.12.2.-19</td>
     <td><a href="">
-        ?</a>
-<tr><td><a href="http://www.trolltech.com/products/qt/index.html">Qt</a>
-    <td>C++
-    <td>2.3.0
+        ?</a></td>
+</tr>
+<tr><td><a href="http://www.trolltech.com/products/qt/index.html">Qt</a></td>
+    <td>C++</td>
+    <td>2.3.0</td>
     <td><a href="ftp://ftp.trolltech.com/qt/source/qt-x11-2.3.0.tar.gz">
-        qt-x11-2.3.0.tar.gz</a>
-<tr><td><a href="http://www.cs.wustl.edu/~schmidt/ACE.html">ACE</a>
-    <td>C++
-    <td>5.2
+        qt-x11-2.3.0.tar.gz</a></td>
+</tr>
+<tr><td><a href="http://www.cs.wustl.edu/~schmidt/ACE.html">ACE</a></td>
+    <td>C++</td>
+    <td>5.2</td>
     <td><a href="http://deuce.doc.wustl.edu/Download.html">
-        ACE (download)</a>
-<tr><td><a href="http://www.netlib.org/lapack/index.html">LAPACK</a>
-    <td>Fortran
-    <td>3.0
+        ACE (download)</a></td>
+</tr>
+<tr><td><a href="http://www.netlib.org/lapack/index.html">LAPACK</a></td>
+    <td>Fortran</td>
+    <td>3.0</td>
     <td><a href="http://www.netlib.org/lapack/lapack.tgz">
-        LAPACK (testing programs)</a>
+        LAPACK (testing programs)</a></td>
 </tr>
 </table>
 
@@ -270,16 +286,20 @@ Therefore, we will use the following benchmarks for measuring code
 quality:</p>
 
 <table align="center">
-<tr><th align=left>Name</th>
-    <th align=left>Language</th>
-    <th align=left>Source URL</th>
+<tr><th align="left">Name</th>
+    <th align="left">Language</th>
+    <th align="left">Source URL</th>
+</tr>
 <tr><td>gzip 1.2.4a</td><td>C</td>
+</tr>
 <tr><td>Stepanov</td><td>C++</td>
     <td><a href="ftp://ftp.kai.com/pub/benchmarks/stepanov_v1p2.C">
          stepanov_v1p2.C</a></td>
+</tr>
 <tr><td>LAPACK</td><td>Fortran</td>
     <td><a href="http://www.netlib.org/lapack/lapack.tgz">
         LAPACK 3.0 (timing programs)</a></td>
+</tr>
 </table>
 
 <p>A Java benchmark is not required for this release since there is little
@@ -309,18 +329,26 @@ will have a non-zero cost.</p>
 <p>In order to measure compile-time performance, we will use the
 following unit tests:</p>
 <table>
-<tr><th align=left>Name
-    <th align=left>Language
-    <th align=left>Source
-    <th align=left>Flags
-    <th align=left>Comments
-<tr><td>insn-attrtab.c<td>C<td>
-    <td>-O2
+<tr><th align="left">Name</th>
+    <th align="left">Language</th>
+    <th align="left">Source</th>
+    <th align="left">Flags</th>
+    <th align="left">Comments</th>
+</tr>
+<tr><td>insn-attrtab.c</td>
+    <td>C</td>
+    <td></td>
+    <td>-O2</td>
     <td>This file contains a large machine-generated switch
         statement; it is a reasonable benchmark for testing flow
-        optimizations and for handling large functions.
-<tr><td><td>C++
-<tr><td><td>Fortran
+        optimizations and for handling large functions.</td>
+</tr>
+<tr><td></td>
+    <td>C++</td>
+</tr>
+<tr><td></td>
+    <td>Fortran</td>
+</tr>
 </table>
 
 <p>In addition to these unit tests, we will measure the time and peak
@@ -336,16 +364,16 @@ both GCC 2.95.2 and GCC 3.1.</p>
 <p>The following issues are as of yet unresolved:</p>
 
 <ul>
-<li>What integration tests should be used for Fortran?
+<li>What integration tests should be used for Fortran?</li>
 <li>What other tests should we use for compile-time performance
-measurement?
-<li>What tests should we use for code quality?
+measurement?</li>
+<li>What tests should we use for code quality?</li>
 <li>Should we use flags higher than <code>-O2 -g</code> when
 bootstrapping?  (Probably we should have a matrix of various flags, as
-in previous releases.)
-<li>Should we add PowerPC GNU/Linux to the list of platforms?
-<li>Should we use Tru64 in place of Alpha GNU/Linux?
-<li>Which open bugs need to be fixed?
+in previous releases.)</li>
+<li>Should we add PowerPC GNU/Linux to the list of platforms?</li>
+<li>Should we use Tru64 in place of Alpha GNU/Linux?</li>
+<li>Which open bugs need to be fixed?</li>
 </ul>
 
 </body>
