--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -122,8 +122,8 @@
 
 <h2>Current development</h2>
 
-<p>Please note that the following documentation refers to <EM>current
-development</EM>.  Some information may not be applicable to any
+<p>Please note that the following documentation refers to <em>current
+development</em>.  Some information may not be applicable to any
 existing release.</p>
 
 <ul>
