Make markup XHTML 1.0 compliant. By Andrea 'Fyre Wyzard' Bocci <fwyzard@inwind.it>.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -460,7 +460,7 @@ Successful with modifications:
 <td>i686-pc-linux-gnu (C3)</td>
 <td>Red Hat 6.2, glibc 2.1.3, kernel 2.2.19</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01314.html">3.0.3</a></ltd>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01314.html">3.0.3</a></td>
 </tr>
 
 <tr>
