--- a/htdocs/gcc-3.0/c99status.html
+++ b/htdocs/gcc-3.0/c99status.html
@@ -20,9 +20,9 @@ paragraph 6) do not count as library issues.</p>
 href="../c99status.html">C99 support in mainline CVS GCC</a> is also
 available.</p>
 
-<p>See below the table for further notes on some issues.
+<p>See below the table for further notes on some issues.</p>
 
-<table border>
+<table border="1">
 <tr><th>Feature</th>
     <th>Library Issue</th>
     <th>Done</th>
@@ -31,13 +31,13 @@ available.</p>
 </tr>
 
 <tr><td><em>restricted character set support via digraphs and
-    <br><code>&lt;iso646.h&gt;</code> (originally specified in AMD1)</em></td>
+    <br /><code>&lt;iso646.h&gt;</code> (originally specified in AMD1)</em></td>
     <td></td>
     <td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>wide character library support in
-    <code>&lt;wchar.h&gt;</code><br>and <code>&lt;wctype.h&gt;</code>
+    <code>&lt;wchar.h&gt;</code><br />and <code>&lt;wctype.h&gt;</code>
     (originally specified in AMD1)</em></td>
     <td>Library Issue</td>
     <td></td><td></td><td>Missing</td>
@@ -62,7 +62,7 @@ available.</p>
     <td></td><td>Done</td><td></td><td></td>
 </tr>
 
-<tr><td><em><code>static</code> and type qualifiers<br>in parameter array declarators</em></td>
+<tr><td><em><code>static</code> and type qualifiers<br />in parameter array declarators</em></td>
     <td></td><td></td><td></td><td>Missing</td>
 </tr>
 
@@ -86,7 +86,7 @@ available.</p>
     <td></td><td></td>
 </tr>
 
-<tr><td><em>additional floating-point characteristics<br>in <code>&lt;float.h&gt;</code></em></td>
+<tr><td><em>additional floating-point characteristics<br />in <code>&lt;float.h&gt;</code></em></td>
     <td></td><td>Done</td>
     <td></td><td></td>
 </tr>
@@ -109,7 +109,7 @@ available.</p>
 </tr>
 
 <tr><td><em>hexadecimal floating-point constants and
-    <code>%a</code><br> and <code>%A</code>
+    <code>%a</code><br /> and <code>%A</code>
     <code>printf</code>/<code>scanf</code> conversion specifiers</em></td>
     <td>Library Issue</td><td>Done</td>
     <td></td><td></td>
@@ -145,7 +145,7 @@ available.</p>
     <td></td><td></td>
 </tr>
 
-<tr><td><em>preprocessor arithmetic<br>done in <code>intmax_t</code>/<code>uintmax_t</code></em></td>
+<tr><td><em>preprocessor arithmetic<br />done in <code>intmax_t</code>/<code>uintmax_t</code></em></td>
     <td></td><td></td><td>Broken</td><td></td>
 </tr>
 
@@ -153,7 +153,7 @@ available.</p>
     <td></td><td>Done</td><td></td><td></td>
 </tr>
 
-<tr><td><em>new block scopes for selection<br>and iteration statements</em></td>
+<tr><td><em>new block scopes for selection<br />and iteration statements</em></td>
     <td></td><td>Done</td><td></td><td></td>
 </tr>
 
@@ -171,7 +171,7 @@ available.</p>
 </tr>
 
 <tr><td><em>the <code>vscanf</code> family of functions
-    in<br><code>&lt;stdio.h&gt;</code> and <code>&lt;wchar.h&gt;</code></em></td>
+    in<br /><code>&lt;stdio.h&gt;</code> and <code>&lt;wchar.h&gt;</code></em></td>
     <td>Library Issue</td>
     <td>Done</td><td></td><td></td>
 </tr>
@@ -181,12 +181,12 @@ available.</p>
     <td></td><td></td><td>Missing</td>
 </tr>
 
-<tr><td><em>floating-point environment access<br>in <code>&lt;fenv.h&gt;</code></em></td>
+<tr><td><em>floating-point environment access<br />in <code>&lt;fenv.h&gt;</code></em></td>
     <td>Library Issue</td>
     <td></td><td></td><td></td>
 </tr>
 
-<tr><td><em>IEC 60559 (also known as<br>IEC 559 or IEEE arithmetic) support</em></td>
+<tr><td><em>IEC 60559 (also known as<br />IEC 559 or IEEE arithmetic) support</em></td>
     <td></td><td></td><td>Broken</td><td></td>
 </tr>
 
@@ -195,7 +195,7 @@ available.</p>
     <td></td><td></td>
 </tr>
 
-<tr><td><em><code>%lf</code> conversion specifier<br>allowed in <code>printf</code></em></td>
+<tr><td><em><code>%lf</code> conversion specifier<br />allowed in <code>printf</code></em></td>
     <td>Library Issue</td><td>Done</td><td></td><td></td>
 </tr>
 
@@ -222,7 +222,7 @@ available.</p>
     <td></td><td>Done</td><td></td><td></td>
 </tr>
 
-<tr><td><em>new struct type compatibility<br>rules (tag compatibility)</em></td>
+<tr><td><em>new struct type compatibility<br />rules (tag compatibility)</em></td>
     <td></td><td>Done</td><td></td><td></td>
 </tr>
 
@@ -251,12 +251,12 @@ available.</p>
     <td>Library Issue</td><td>Done</td><td></td><td></td>
 </tr>
 
-<tr><td><em>deprecate <code>ungetc</code> at the<br>beginning of a binary file</em></td>
+<tr><td><em>deprecate <code>ungetc</code> at the<br />beginning of a binary file</em></td>
     <td>Library Issue</td>
     <td></td><td></td><td></td>
 </tr>
 
-<tr><td><em>remove deprecation of<br>aliased array parameters</em></td>
+<tr><td><em>remove deprecation of<br />aliased array parameters</em></td>
     <td></td><td>Done</td>
     <td></td><td></td>
 </tr>
@@ -266,7 +266,7 @@ available.</p>
     <td></td><td>Missing</td>
 </tr>
 
-<tr><td><em>relaxed constraints on aggregate<br>and union initialization</em></td>
+<tr><td><em>relaxed constraints on aggregate<br />and union initialization</em></td>
     <td></td><td>Done</td>
     <td></td><td></td>
 </tr>
@@ -277,7 +277,7 @@ available.</p>
 </tr>
 
 <tr><td><em><code>return</code> without expression not permitted
-    in<br>function that returns a value (and vice versa)</em></td>
+    in<br />function that returns a value (and vice versa)</em></td>
     <td></td><td>Done</td>
     <td></td><td></td>
 </tr>
