--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -39,7 +39,7 @@ possible.</p>
 
 <p>GCC 3.0 will contain considerable improvements in functionality
 relative to previous releases of GCC.  Each of these improvements must
-be completed before GCC 3.0 is released:
+be completed before GCC 3.0 is released:</p>
 <ul>
 <li><p>C preprocessor</p>
     <p>GCC 3.0 will use a new implementation of the C preprocessor.
@@ -50,38 +50,46 @@ be completed before GCC 3.0 is released:
        based on <code>cpplib</code> rather than <code>cccp.c</code>.)
        <strong>Done and surpassed</strong>.  The integrated
        preprocessor was ready in time to be made the default.</p>
+</li>
 <li><p>C++ ABI</p>
     <p>In order to avoid changing the C++ ABI from release to release, 
        as GCC has done to date, there must be a stable ABI.</p>
+</li>
 <li><p>C++ Standard Library</p>
     <p>The standard library is a part of the ABI.  Changing the
        standard library interfaces is effectively a change in the
        ABI.  It is important that we provide a standards-conforming
        C++ standard library.</p>
+</li>
 <li><p>Java Standard Library</p>
     <p>The Java standard library should be present in the tree is
        required in order to avoid users having to download it
        separately.  <strong>Done</strong>.</p>
+</li>
 <li><p>GCC Support Library</p>
     <p>The <code>libgcc</code> library will be built in both static
        and shared library whenever <code>--enable-shared</code> is
        used to configure GCC.  As GCC 3.0 will contain other ABI 
        changes, now is as good a time as any to make this change.
        <strong>Partly done</strong>.</p>
+</li>
 <li><p>Java Front-End Garbage Collection</p>
     <p>The Java front-end will be converted to use garbage collection,
        like the other GCC front-ends.  This conversion will enable the
        simplification, optimization, and removal of code in the
        machine-independent portions of the compiler, as well as in 
        the various back-ends.  <strong>Done</strong>.</p>
+</li>
 <li><p>Chill Front-End Garbage Collection</p>
     <p>Like the Java front-end, the Chill front-end will be converted
        to use garbage collection.  <strong>Dropped</strong>.  No
        volunteer has been found to do this, so GCC 3.0 will not
        support Chill unless one comes forward.</p>
+</li>
 <li><p>Open Bugs</p>
     <p>High-priority open bugs in GNATs will be fixed before the
        GCC 3.0 release.</p>
+</li>
 <li><p>Installation Documentation</p>
     <p>Merge on-line installation documentation,
        <code>gcc/install.texi</code>, past changes
@@ -91,6 +99,7 @@ be completed before GCC 3.0 is released:
        <code>gcc/README.*</code> files, and
        <code>gcc/f/g77install.texi</code>.
        <strong>Partly done</strong></p>
+</li>
 </ul>
 
 <h2>Platform Support</h2>
@@ -104,14 +113,14 @@ possible, the release will support other targets as well.</p>
 
 <table align="center">
 <caption>Primary Evaluation Platforms</caption>
-<tr><th>Chip     <th>OS                  <th>Triplet
-<tr><td>Alpha    <td>RedHat Linux 6.2    <td>
-<tr><td>HPPA     <td>HPUX 11.0           <td>hppa2.0w-hp-hpux11.00
-<tr><td>Intel x86<td>Debian GNU/Linux 2.2<td>i386-pc-linux-gnu
-<tr><td>Intel x86<td>RedHat Linux 6.2    <td>i686-pc-linux-gnu
-<tr><td>MIPS     <td>IRIX 6.5            <td>mips-sgi-irix6.5
-<tr><td>PowerPC  <td>AIX 4.3.3           <td>powerpc-ibm-aix4.3.3.0
-<tr><td>SPARC    <td>Solaris 2.7         <td>sparc-sun-solaris2.7
+<tr><th>Chip</th>     <th>OS</th>                  <th>Triplet</th></tr>
+<tr><td>Alpha</td>    <td>RedHat Linux 6.2</td>    <td></td></tr>
+<tr><td>HPPA</td>     <td>HPUX 11.0</td>           <td>hppa2.0w-hp-hpux11.00</td></tr>
+<tr><td>Intel x86</td><td>Debian GNU/Linux 2.2</td><td>i386-pc-linux-gnu</td></tr>
+<tr><td>Intel x86</td><td>RedHat Linux 6.2</td>    <td>i686-pc-linux-gnu</td></tr>
+<tr><td>MIPS</td>     <td>IRIX 6.5</td>            <td>mips-sgi-irix6.5</td></tr>
+<tr><td>PowerPC</td>  <td>AIX 4.3.3</td>           <td>powerpc-ibm-aix4.3.3.0</td></tr>
+<tr><td>SPARC</td>    <td>Solaris 2.7</td>         <td>sparc-sun-solaris2.7</td></tr>
 </table>
 
 <p>GCC's performance on the following platforms will not be required
@@ -141,16 +150,16 @@ answering questions and reviewing patches as time permits.</p>
 
 <table align="center">
 <caption>Secondary Evaluation Platforms</caption>
-<tr><th>Chip     <th>OS                  <th>Triplet
-    <th>Tester
-<tr><td>Intel x86<td>FreeBSD 4.2         <td>i386-unknown-freebsd4.2
-    <td><a href="mailto:obrien@freebsd.org">David O'Brien</a></td>
-<tr><td>PowerPC  <td>GNU/Linux           <td>
-<tr><td>SPARC    <td>SunOS 4.1.4         <td>sparc-sun-sunos4.1.4
-<tr><td>SPARC    <td>Debian GNU/Linux 2.2<td>sparc-linux
-    <td><a href="mailto:bcollins@debian.org">Ben Collins</a>
-<tr><td>ARM      <td>GNU/Linux           <td>armv4l-unknown-linux-gnu
-<tr><td>Intel x86<td>Cygwin              <td>i686-pc-cygwin
+<tr><th>Chip</th>     <th>OS</th>                  <th>Triplet</th>
+    <th>Tester</th></tr>
+<tr><td>Intel x86</td><td>FreeBSD 4.2</td>         <td>i386-unknown-freebsd4.2</td>
+    <td><a href="mailto:obrien@freebsd.org">David O'Brien</a></td></tr>
+<tr><td>PowerPC</td>  <td>GNU/Linux</td>           <td></td></tr>
+<tr><td>SPARC</td>    <td>SunOS 4.1.4</td>         <td>sparc-sun-sunos4.1.4</td></tr>
+<tr><td>SPARC</td>    <td>Debian GNU/Linux 2.2</td><td>sparc-linux</td>
+    <td><a href="mailto:bcollins@debian.org">Ben Collins</a></td></tr>
+<tr><td>ARM</td>      <td>GNU/Linux</td>           <td>armv4l-unknown-linux-gnu</td></tr>
+<tr><td>Intel x86</td><td>Cygwin</td>              <td>i686-pc-cygwin</td></tr>
 </table>
 
 <h2>Language Support</h2>
@@ -159,9 +168,9 @@ answering questions and reviewing patches as time permits.</p>
 this release, only the behavior of front-ends for the following
 languages will be considered part of the release criteria:</p>
 <ul>
-<li>C
-<li>C++
-<li>Fortran
+<li>C</li>
+<li>C++</li>
+<li>Fortran</li>
 </ul>
 
 <p>The following languages will be supported by the release, but their
@@ -169,9 +178,9 @@ behavior will not be a primary consideration in determining whether or
 not to ship a particular release candidate:</p>
 
 <ul>
-<li>Chill (<strong>Dropped</strong>; see above)
-<li>Java
-<li>Objective-C
+<li>Chill (<strong>Dropped</strong>; see above)</li>
+<li>Java</li>
+<li>Objective-C</li>
 </ul>
 
 <p>In particular, no application testing, code quality, or compile-time
@@ -205,30 +214,34 @@ different programming languages.</p>
 
 <table align="center">
 <caption>Integration Tests</caption>
-<tr><th>Name
-    <th>Language
-    <th>Version
-    <th>Source URL
-<tr><td><a href="http://www.kernel.org">Linux kernel</a>
-    <td>C
-    <td>2.4.0
+<tr><th>Name</th>
+    <th>Language</th>
+    <th>Version</th>
+    <th>Source URL</th>
+</tr>
+<tr><td><a href="http://www.kernel.org">Linux kernel</a></td>
+    <td>C</td>
+    <td>2.4.0</td>
     <td><a
     href="ftp://ftp.kernel.org/pub/linux/kernel/v2.4/linux-2.4.0.tar.gz">
-    linux-2.4.0.tar.gz</a>
-<tr><td><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a>
-    <td>C
-    <td>20.6
-    <td>
-<tr><td><a href="http://www.acl.lanl.gov/pooma/">POOMA</a>
-    <td>C++
-    <td>2.2.0
+    linux-2.4.0.tar.gz</a></td>
+</tr>
+<tr><td><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a></td>
+    <td>C</td>
+    <td>20.6</td>
+    <td></td>
+</tr>
+<tr><td><a href="http://www.acl.lanl.gov/pooma/">POOMA</a></td>
+    <td>C++</td>
+    <td>2.2.0</td>
     <td><a href="http://www.acl.lanl.gov/distributions/pooma-2.3.0.tgz">
-        pooma-2.3.0.tgz</a>
-<tr><td><a href="http://www.netlib.org/lapack/index.html">LAPACK</a>
-    <td>Fortran
-    <td>3.0
+        pooma-2.3.0.tgz</a></td>
+</tr>
+<tr><td><a href="http://www.netlib.org/lapack/index.html">LAPACK</a></td>
+    <td>Fortran</td>
+    <td>3.0</td>
     <td><a href="http://www.netlib.org/lapack/lapack.tgz">
-        LAPACK (testing programs)</a>
+        LAPACK (testing programs)</a></td>
 </tr>
 </table>
 
@@ -279,16 +292,20 @@ previous releases.  Therefore, we will use the following benchmarks
 for measuring code quality:</p>
 
 <table align="center">
-<tr><th align=left>Name</th>
-    <th align=left>Language</th>
-    <th align=left>Source URL</th>
+<tr><th align="left">Name</th>
+    <th align="left">Language</th>
+    <th align="left">Source URL</th>
+</tr>
 <tr><td>gzip 1.2.4a</td><td>C</td>
+</tr>
 <tr><td>Stepanov</td><td>C++</td>
     <td><a href="ftp://ftp.kai.com/pub/benchmarks/stepanov_v1p2.C">
          stepanov_v1p2.C</a></td>
+</tr>
 <tr><td>LAPACK</td><td>Fortran</td>
     <td><a href="http://www.netlib.org/lapack/lapack.tgz">
         LAPACK 3.0 (timing programs)</a></td>
+</tr>
 </table>
 
 <p>A Java benchmark is not required for this release since there is
@@ -321,18 +338,22 @@ cost.</p>
 <p>In order to measure compile-time performance, we will use the
 following unit tests:</p>
 <table>
-<tr><th align=left>Name
-    <th align=left>Language
-    <th align=left>Source
-    <th align=left>Flags
-    <th align=left>Comments
-<tr><td>insn-attrtab.c<td>C<td>
-    <td>-O2
+<tr><th align="left">Name</th>
+    <th align="left">Language</th>
+    <th align="left">Source</th>
+    <th align="left">Flags</th>
+    <th align="left">Comments</th>
+</tr>
+<tr><td>insn-attrtab.c</td><td>C</td><td></td>
+    <td>-O2</td>
     <td>This file contains a large machine-generated switch
         statement; it is a reasonable benchmark for testing flow
-        optimizations and for handling large functions.
-<tr><td><td>C++
-<tr><td><td>Fortran
+        optimizations and for handling large functions.</td>
+</tr>
+<tr><td></td><td>C++</td>
+</tr>
+<tr><td></td><td>Fortran</td>
+</tr>
 </table>
 
 <p>In addition to these unit tests, we will measure the time and peak
@@ -348,18 +369,18 @@ more than 25%, that candidate will be deemed unacceptable.</p>
 <p>The following issues are as of yet unresolved:</p>
 
 <ul>
-<li>What integration tests should be used for Fortran?
+<li>What integration tests should be used for Fortran?</li>
 <li>What other tests should we use for compile-time performance
-measurement?
-<li>What tests should we use for code quality?
-<li>Should <code>-fstrict-aliasing</code> be enabled?
+measurement?</li>
+<li>What tests should we use for code quality?</li>
+<li>Should <code>-fstrict-aliasing</code> be enabled?</li>
 <li>Should we use flags higher than <code>-O2 -g</code> when
 bootstrapping?  (Probably we should have a matrix of various flags, as
-in previous releases.)
-<li>Should we add PowerPC GNU/Linux to the list of platforms?
-<li>Should we use Tru64 in place of Alpha GNU/Linux?
-<li>Should we eliminate setjmp/longjmp exception-handling?
-<li>Which open bugs need to be fixed?
+in previous releases.)</li>
+<li>Should we add PowerPC GNU/Linux to the list of platforms?</li>
+<li>Should we use Tru64 in place of Alpha GNU/Linux?</li>
+<li>Should we eliminate setjmp/longjmp exception-handling?</li>
+<li>Which open bugs need to be fixed?</li>
 </ul>
 
 </body>
