* download.html:  Full XHTML 1.0 compliance. 	* footer.ihtml:  Likewise. 	* header.ihtml:  Likewise. 	* index.html:  Likewise. 	* status.html:  Likewise. 	* thanks.html:  Likewise.

--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -1,8 +1,8 @@
 <html>
 <head>
- <meta name="KEYWORDS" content="libstdc++, homepage, home, g++, libg++, STL">
+ <meta name="KEYWORDS" content="libstdc++, homepage, home, g++, libg++, STL" />
  <title>Standard C++ Library v3</title>
-<link rel=StyleSheet href="lib3styles.css">
+ <link rel="StyleSheet" href="lib3styles.css" />
 </head>
 <body>
 
@@ -11,7 +11,7 @@
 
 <h3>Status</h3>
 
-<hr>
+<hr />
 <p>For release 3.0.95, two tarballs are available.  The first,
    <a href="download.html">libstdc++-v3.0.95-gcc-3.1.x.tar.gz</a>, is for
    use with current dvelopment GCC (and the 3.1 branch, a few months from
@@ -40,7 +40,7 @@
    including its default libstdc++-v3.  If you want major changes everywhere,
    then just use the CVS compiler.  :-)
 </p>
-<hr>
+<hr />
 
 <p>Compiling this library requires sources of a recent version of GCC.
    We suggest using CVS GCC.  The latest library snapshot has also been
@@ -72,8 +72,8 @@
 </p>
 
 <p>Known problems and bugs, which will force us to actually keep this
-   file up-to-date, can be found in <A
-   HREF="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/BUGS">bugs</a>.
+   file up-to-date, can be found in <a
+   href="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/BUGS">bugs</a>.
 </p>
 
 <p>Things that need to be done and are looking for volunteers can be found in:
