--- a/htdocs/libstdc++/thanks.html
+++ b/htdocs/libstdc++/thanks.html
@@ -1,8 +1,8 @@
 <html>
 <head>
- <meta name="KEYWORDS" content="libstdc++, homepage, home, g++, libg++, STL">
+ <meta name="KEYWORDS" content="libstdc++, homepage, home, g++, libg++, STL" />
  <title>Standard C++ Library v3</title>
-<link rel=StyleSheet href="lib3styles.css">
+ <link rel="StyleSheet"href="lib3styles.css" />
 </head>
 <body>
 
@@ -22,124 +22,127 @@
    <a href="mailto:pme@gcc.gnu.org">pme@gcc.gnu.org</a>
    if you have been left out or some of your contributions are not listed.
    Please keep this list in alphabetical order.
+</p>
 
    <!--
          Latest update 2001-12-18, more or less.
    -->
 <ul>
 
-  <li>J. David Anglin for threading-related fixes and improvements.
+  <li>J. David Anglin for threading-related fixes and improvements.</li>
 
   <li>Paolo Carlini for lots of efficiency improvements to the string class,
-      and keeping up with the PR reports.
+      and keeping up with the PR reports.</li>
 
-  <li>Michael Cook for cleanup patches to reduce warnings.
+  <li>Michael Cook for cleanup patches to reduce warnings.</li>
 
-  <li>Russell Davidson for fstream and stringstream fixes.
+  <li>Russell Davidson for fstream and stringstream fixes.</li>
 
   <li>Gabriel Dos Reis for contributing the valarray implementation,
       taming g++ diagnostic messages involving templates, maintaining
       the numerics library (including that pesky &lt;limits&gt; :-), and
-      keeping up-to-date anything to do with numbers.
+      keeping up-to-date anything to do with numbers.</li>
 
   <li>Ulrich Drepper for all kinds of C interface issues, contributing
       and maintaining complex&lt;&gt;, sanity checking and disbursement, 
-      configuration architecture, libio maintenance, early math work.
+      configuration architecture, libio maintenance, early math work.</li>
 
-  <li>David Edelsohn for doing the entire AIX port with his bare hands.
+  <li>David Edelsohn for doing the entire AIX port with his bare hands.</li>
 
-  <li>Kevin Ediger for the floating point formatting of num_put::do_put.
+  <li>Kevin Ediger for the floating point formatting of num_put::do_put.</li>
 
   <li>Phil Edwards for configuration hackery, documentation maintainer,
-      chief breaker of the web pages, and the occasional iostream bugfix.
+      chief breaker of the web pages, and the occasional iostream bugfix.</li>
 
   <li>Mark Elbrecht for configuration support for locales and
-      fstream-related fixes.
+      fstream-related fixes.</li>
 
-  <li>Vadim Egorov for fixes in strings, streambufs, and iostreams.
+  <li>Vadim Egorov for fixes in strings, streambufs, and iostreams.</li>
 
-  <li>Nicolai Josuttis for additional documentation.
+  <li>Nicolai Josuttis for additional documentation.</li>
 
   <li>Ryszard Kabatek for many, many bugfixes and optimizations of strings,
-      especially member functions, and for auto_ptr fixes.
+      especially member functions, and for auto_ptr fixes.</li>
 
   <li>Brendan Kehoe for a lot of early work in just about every part of
-      the library.
+      the library.</li>
 
-  <li>Mumit Khan for massive porting work to Cygwin/Mingw32.
+  <li>Mumit Khan for massive porting work to Cygwin/Mingw32.</li>
 
-  <li>Benjamin Kosnik for, well, everything.
+  <li>Benjamin Kosnik for, well, everything.</li>
 
   <li>Martin v. Loewis for namespace patches and fixes, and tons of
-      assistance with the compiler merges.
+      assistance with the compiler merges.</li>
 
   <li>Philip Martin for lots of string and vector iterator fixes and
-      improvements, and string clean up and testsuites.
+      improvements, and string clean up and testsuites.</li>
 
   <li>Alfred Minarik for string and ios bugfixes, and turning the entire
-      testsuite namespace-compatible.
+      testsuite namespace-compatible.</li>
 
   <li>Jason Molenda for keeping all the machines running.  Doing all
       this work on scrap paper and the backs of envelopes would have
-      been... difficult.
+      been... difficult.</li>
 
   <li>Nathan Myers for architecture and authorship through the first 
        three snapshots, including implementation of locale infrastructure, 
        string, shadow C headers, and the initial project documentation 
        (DESIGN, CHECKLIST, and so forth).  Later, more work on MT-safe 
-       string and shadow headers.
+       string and shadow headers.</li>
 
-  <li>Felix Natter for documentation on porting.
+  <li>Felix Natter for documentation on porting.</li>
 
-  <li>Alexandre Oliva for keeping libtool issues sane and happy.
+  <li>Alexandre Oliva for keeping libtool issues sane and happy.</li>
 
   <li>Gerald &quot;Jerry&quot; Pfeifer for lots of help on merging with
-      the main GCC project.
+      the main GCC project.</li>
 
   <li>Loren James Rittle for threading fixes, thread-related configury
       changes, critical threading documentation, and solutions to really
-      tricky I/O problems.
+      tricky I/O problems.</li>
 
   <li>Chip Salzenberg for patches and improvements to locales, traits,
-      Makefiles, libio, libtool hackery, and &quot;long long&quot; support.
+      Makefiles, libio, libtool hackery, and &quot;long long&quot; 
+      support.</li>
 
   <li>Peter Schmid for constant testing -- especially application testing,
       going above and beyond what was requested for the release criteria
-      -- and header file tweaks.
+      -- and header file tweaks.</li>
 
   <li>Kenny Simpson for prompting fixes due to defect reports from the
-      LWG (thereby keeping us in line with updates from the ISO).
+      LWG (thereby keeping us in line with updates from the ISO).</li>
 
   <li>Scott Snyder for queue, iterator, istream, and string fixes and
-      testsuite entries.
+      testsuite entries.</li>
 
-  <li>Petter Urkedal for CXXFLAGS, math, and algorithms fixes.
+  <li>Petter Urkedal for CXXFLAGS, math, and algorithms fixes.</li>
 
   <li>Brent Verner for work with the cshadow files and their associated
-      configure steps.
+      configure steps.</li>
 
   <li>Stephen M. Webb for time and effort on making shadow files work
       with the tricky Solaris 8+ headers, and for pushing the build-time
-      header tree.
+      header tree.</li>
 
-</ul></p>
+</ul>
 
 <p>We'd also like to thank the folks who have contributed time and
    energy in testing libstdc++-v3, especially those sending in testsuite
    evaluations and documentation corrections:
+</p>
 
 <ul>
 
-  <li>David Billinghurst
-  <li>David Gilbert
-  <li>Levente Farkas 
-  <li>J&uuml;rgen Freyh
-  <li>James Kanze
-  <li>llewelly <!-- Honest, that's the only name in the messages. -->
-  <li>George Talbot
-  <li>Carlo Wood
+  <li>David Billinghurst</li>
+  <li>David Gilbert</li>
+  <li>Levente Farkas</li>
+  <li>J&uuml;rgen Freyh</li>
+  <li>James Kanze</li>
+  <li>llewelly</li> <!-- Honest, that's the only name in the messages. -->
+  <li>George Talbot</li>
+  <li>Carlo Wood</li>
 
-</ul></p>
+</ul>
 
 <p>It couldn't be done without you!</p>
 
