--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
- <meta name="KEYWORDS" content="libstdc++, homepage, home, g++, libg++, STL">
+ <meta name="KEYWORDS" content="libstdc++, homepage, home, g++, libg++, STL" />
  <title>Standard C++ Library v3</title>
-<link rel=StyleSheet href="lib3styles.css">
+ <link rel="StyleSheet" href="lib3styles.css" />
 </head>
 <body>
 
@@ -34,57 +34,57 @@
      works send an email to pedwards/pme (check the archives for an address).
 -->
 
-<hr>
+<hr />
 
 <h3>News</h3>
 
 <dl>
- <dt>2002-02-01
+ <dt>2002-02-01</dt>
  <dd>A
    <a href="http://gcc.gnu.org/ml/libstdc++/2002-02/msg00003.html">call
-   for /* comment */ writers</a> was posted to the community.
- <dt>2002-02-01
+   for /* comment */ writers</a> was posted to the community.</dd>
+ <dt>2002-02-01</dt>
  <dd> Thirteenth snapshot release,
-   <a href="download.html">libstdc++-v3.0.96</a>.
- <dt>2001-12-18
- <dd> Twelfth snapshot release, libstdc++-v3.0.95.
- <dt>2001-06-18
+   <a href="download.html">libstdc++-v3.0.96</a>.</dd>
+ <dt>2001-12-18</dt>
+ <dd> Twelfth snapshot release, libstdc++-v3.0.95.</dd>
+ <dt>2001-06-18</dt>
  <dd> First major compiler release using libstdc++-v3 by default,
-   <a href="http://gcc.gnu.org/gcc-3.0/">GCC 3.0</a>.
- <dt>2001-04-06
- <dd> Eleventh snapshot release, libstdc++-2.92.tar.gz.
- <dt>2000-11-17
- <dd> Tenth snapshot release, libstdc++-2.91.tar.gz.
- <dt>2000-11-12
+   <a href="http://gcc.gnu.org/gcc-3.0/">GCC 3.0</a>.</dd>
+ <dt>2001-04-06</dt>
+ <dd> Eleventh snapshot release, libstdc++-2.92.tar.gz.</dd>
+ <dt>2000-11-17</dt>
+ <dd> Tenth snapshot release, libstdc++-2.91.tar.gz.</dd>
+ <dt>2000-11-12</dt>
  <dd> Officially
    <a href="http://gcc.gnu.org/ml/gcc/2000-11/msg00522.html">made 
-   libstdc++-v3 the default C++ library</a>.
- <dt>2000-04-21
- <dd> Officially merged library sources into GCC.
- <dt>2000-03-24 
- <dd> Ninth snapshot release, libstdc++-2.90.8.tar.gz.
- <dt>1999-12-21
- <dd> Eighth snapshot release, libstdc++-2.90.7.tar.gz.
- <dt>1999-08-04
- <dd> Seventh snapshot release, libstdc++-2.90.6.tar.gz.
- <dt>1999-05-18
- <dd> Sixth snapshot release, libstdc++-2.90.5.tar.gz.
- <dt>1999-03-19
- <dd> Fifth snapshot release, libstdc++-2.90.4.tar.gz. 
- <dt>1998-12-31
- <dd> Fourth snapshot release, libstdc++-2.90.3.tar.gz.
- <dt>1998-11-04
+   libstdc++-v3 the default C++ library</a>.</dd>
+ <dt>2000-04-21</dt>
+ <dd> Officially merged library sources into GCC.</dd>
+ <dt>2000-03-24 </dt>
+ <dd> Ninth snapshot release, libstdc++-2.90.8.tar.gz.</dd>
+ <dt>1999-12-21</dt>
+ <dd> Eighth snapshot release, libstdc++-2.90.7.tar.gz.</dd>
+ <dt>1999-08-04</dt>
+ <dd> Seventh snapshot release, libstdc++-2.90.6.tar.gz.</dd>
+ <dt>1999-05-18</dt>
+ <dd> Sixth snapshot release, libstdc++-2.90.5.tar.gz.</dd>
+ <dt>1999-03-19</dt>
+ <dd> Fifth snapshot release, libstdc++-2.90.4.tar.gz.</dd>
+ <dt>1998-12-31</dt>
+ <dd> Fourth snapshot release, libstdc++-2.90.3.tar.gz.</dd>
+ <dt>1998-11-04</dt>
  <dd> Design, feature checklist and readme documents updated.  Also see
-      new &quot;Notes&quot; section.
- <dt>1998-10-30
- <dd> Third snapshot release, libstdc++-2.90.2.tar.gz.
- <dt>1998-07-31
+      new &quot;Notes&quot; section.</dd>
+ <dt>1998-10-30</dt>
+ <dd> Third snapshot release, libstdc++-2.90.2.tar.gz.</dd>
+ <dt>1998-07-31</dt>
  <dd><a href="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/DESIGN">Design
-     document available</a>
- <dt>1998-07-24
- <dd> Second snapshot release, libstdc++-2.90.1.tar.gz. 
- <dt>1998-07-15
- <dd> First snapshot release.
+     document available</a>.</dd>
+ <dt>1998-07-24</dt>
+ <dd> Second snapshot release, libstdc++-2.90.1.tar.gz.</dd>
+ <dt>1998-07-15</dt>
+ <dd> First snapshot release.</dd>
 </dl>
 
 
