Add policy note about confidentality statements.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -135,6 +135,27 @@ and try to avoid cross posting a message to several lists.</p>
 
 <p>Please refrain from sending messages in HTML, RTF or similar formats.</p>
 
+<p>Please do not include or reference confidentiality notices, like:</p>
+<blockquote>
+	<p>The referring document contains privileged and confidential
+	information. If you are not the intended recipient
+	you must not disseminate, copy or take any action
+	in reliance on it, and we request that you notify
+	<var>companyname</var> immediately.</p>
+</blockquote>
+<p>Such disclaimers are inappropriate for mail sent to public lists.  If
+your company automatically adds something like this to outgoing mail,
+and you can't convince them to stop, you might consider using a free
+web-based e-mail account.</p>
+
+<p>Notices like:</p>
+<blockquote>
+	<p>Any views expressed in this message are those of the
+	individual sender, except where they are specifically stated
+	to be the views of <var>companyname</var>.</p>
+</blockquote>
+<p>are acceptable, although they are redundant; unless explicitly stated,
+it's assumed that no-one on these lists means to speak for their company.</p>
 
 <h2>Archives</h2>
 
@@ -162,7 +183,7 @@ lists via this form:</p>
 
 <blockquote>
 <form method="get" action="http://gcc.gnu.org/cgi-bin/ml-request">
-  Mailing list: 
+  <p>Mailing list: 
   <select name="listname">
    <option value="gcc-announce">gcc-announce</option>
    <option value="gcc">gcc</option>
@@ -193,7 +214,7 @@ lists via this form:</p>
     <option value="unsubscribe">unsubscribe</option>
   </select>
   &nbsp;
- <input type="submit" name="submit" value="Process that!" />
+ <input type="submit" name="submit" value="Process that!" /></p>
 </form>
 </blockquote>
 
@@ -218,20 +239,20 @@ List-Archive, etc.).</p>
 <p>For example, the following procmail rule will sort all mail from
 our lists into a single folder named INLIST.gcc:</p>
 
-<blockquote><code>
+<blockquote><p><code>
 :0<br />
 * ^Sender: .*-owner@gcc.gnu.org<br />
 INLIST.gcc<br />
-</code></blockquote>
+</code></p></blockquote>
 
 <p>To filter duplicate messages due to cross-posts to multiple lists, you
 can use the following recipe (Use at your own risk!):</p>
 
-<blockquote><code>
+<blockquote><p><code>
 :0 Wh: msgid.lock<br />
 * ^Sender: .*-owner@gcc.gnu.org<br />
 | formail -D 8192 msgid.cache
-</code></blockquote>
+</code></p></blockquote>
 
 <h2>Help</h2>
 
