Fix several redirected or broken links. Remove two dead mirror sites.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -36,7 +36,7 @@ sites</a>.</p>
 <li>Germany: <a href="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a></li>
 <li>Germany: <a href="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/gcc.gnu.org/pub/gcc/">ftp.mpi-sb.mpg.de</a></li>, thanks to <a href="mailto:ftpadmin@mpi-sb.mpg.de">ftpadmin</a>
 <li>Greece: <a href="ftp://ftp.ntua.gr/pub/gnu/egcs/">ftp.ntua.gr</a>,</li>
-<li>Japan: <a href="ftp://ftp.dti.ad.jp/pub/lang/egcs/">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!</li>
+<li>Japan: <a href="ftp://ftp.dti.ad.jp/pub/lang/gcc/">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!</li>
 <li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs/">ftp.eos.hokudai.ac.jp</a></li>
 <li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs/">ftp.lab.kdd.co.jp</a></li>
 <li>Japan: <a href="ftp://ftp.iij.ad.jp/pub/egcs/">ftp.iij.ad.jp</a></li>
@@ -50,11 +50,9 @@ sites</a>.</p>
 <li>Norway: <a href="ftp://ftp.pvv.ntnu.no/pub/egcs/">ftp.pvv.ntnu.no</a></li>
 <li>Poland: <a href="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs/">ftp.task.gda.pl</a></li>
 <li>Poland (Warsaw): <a href="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a></li>
-<li>Poland (Lodz): <a href="ftp://ftp.fic.uni.lodz.pl/pub/sources.redhat.com/pub/gcc/">ftp.fic.uni.lodz.pl</a></li>
-<li>Romania: <a href="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs/">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!</li>
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs/">ftp.nc.orc.ru</a></li>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs/">linux.ihep.su</a></li>
-<li>South Africa: <a href="ftp://ftp.sun.ac.za/cygnus/gcc/">ftp.sun.ac.za</a></li>
+<li>South Africa: <a href="ftp://ftp.sun.ac.za/mirrorsites/sourceware.cygnus.com/pub/gcc/">ftp.sun.ac.za</a></li>
 <li>Sweden: <a href="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a></li>
 <li>Sweden: <a href="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a></li>
 <li>Sweden: <a href="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a></li>
