--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -55,7 +55,7 @@ optimization pass.
 
 <dt><b>March 16, 2001</b></dt>
 <dd>
-<a href="gcc-2.95/gcc-2.95.3.html">GCC 2.95.3</a> has been released.
+<a href="gcc-2.95/index.html">GCC 2.95.3</a> has been released.
 </dd>
 
 <dt><b>February 12, 2001</b></dt>
@@ -348,7 +348,7 @@ embedded consumer products such as DVD players, HDTV, etc.
 
 <dt><b>October 27, 1999</b></dt>
 <dd>
-<a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2 is released</a>.
+<a href="gcc-2.95/index.html">GCC 2.95.2 is released</a>.
 </dd>
 
 <dt><b>October 16, 1999</b></dt>
@@ -432,7 +432,7 @@ version 2.95.1 Java runtime libraries for use with GCC 2.95.1.
 
 <dt><b>August 19, 1999</b></dt>
 <dd>
-<a href="gcc-2.95/gcc-2.95.1.html">GCC 2.95.1 is released</a>.
+<a href="gcc-2.95/index.html">GCC 2.95.1 is released</a>.
 </dd>
 
 <dt><b>August 4, 1999</b></dt>
@@ -453,7 +453,7 @@ Mumit Khan has
 
 <dt><b>July 31, 1999</b></dt>
 <dd>
-<a href="gcc-2.95/gcc-2.95.html">GCC 2.95 is released</a>.
+<a href="gcc-2.95/index.html">GCC 2.95 is released</a>.
 </dd>
 
 <dt><b>July 11, 1999</b></dt>
@@ -570,7 +570,7 @@ the stack.
 
 <dt><b>March 15, 1999</b></dt>
 <dd>
-<a href="egcs-1.1/egcs-1.1.2.html"><b>egcs-1.1.2 is released</b></a>.
+<a href="egcs-1.1/index.html"><b>egcs-1.1.2 is released</b></a>.
 </dd>
 
 <dt><b>March 10, 1999</b></dt>
@@ -628,7 +628,7 @@ HP aCC symbols.
 <dt><b>December 4, 1998</b></dt>
 <dd>
 
-<a href="egcs-1.1/egcs-1.1.1.html"><b>egcs-1.1.1 is released</b></a>.
+<a href="egcs-1.1/index.html"><b>egcs-1.1.1 is released</b></a>.
 </dd>
 
 <dt><b>November 26, 1998</b></dt>
@@ -686,7 +686,7 @@ Cygnus donates <a href="java/gcj-announce.txt"><b>Java front end</b></a>.
 
 <dt><b>September 3, 1998</b></dt>
 <dd>
-  <a href="egcs-1.1/egcs-1.1.html"><b>egcs-1.1 is released</b></a>.
+  <a href="egcs-1.1/index.html"><b>egcs-1.1 is released</b></a>.
 </dd>
 
 <dt><b>August 29, 1998</b></dt>
