--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -281,7 +281,7 @@ tahoe. These are listed here just for completeness.
   <br />Manufacturer: <a href="http://www.ibm.com">IBM</a>
   <br />Acronym stands for: Research/Office Products MicroProcessor
   <br />The ROMP was the processor inside the IBM PC/RT.
-  <br /><a href="http://www.jmas.co.jp/FAQs/ibm-rt-faq/hardware">PC/RT hardware FAQ</a>
+  <br /><a href="http://FAQs.jmas.co.jp/FAQs/ibm-rt-faq/hardware">PC/RT hardware FAQ</a>
  </li>
  
  <li>rs6000 (powerpc, powerpcle)
