--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -102,7 +102,7 @@ StackGuard 1.21 is based on gcc-2.7.2.</p>
 apply to current GCC sources but are of historical interest or may
 be helpful to consult for future development.</p>
 
-<h2><a href="http://www.uow.edu.au/~andrewm/gsptools.html">Development
+<h2><a href="http://www.zip.com.au/~akpm/gsptools.html">Development
 tools for the TMS340x0</a></h2>
 
 <p>A GCC port to a <em>bit-addressable</em> architecture.</p>
