Add i386-unknown-openbsd3.0 for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -274,6 +274,13 @@ Successful (C):
 </tr>
 
 <tr>
+<td>i386-unknown-openbsd3.0</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01044.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>i486-suse-linux-gnu</td>
 <td>SuSE 7.1, glibc 2.2, kernel 2.4.x</td>
 <td>Successful:
