--- a/htdocs/gcc-3.0/index.html
+++ b/htdocs/gcc-3.0/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>GCC 3.0.3</title>
+<title>GCC 3.0.4</title>
 </head>
 
 <body>
@@ -11,19 +11,18 @@ June 18, 2001: GCC 3.0 has been released.<br />
 August 20, 2001: GCC 3.0.1 has been released.<br />
 October 25, 2001: GCC 3.0.2 has been released.<br />
 December 20, 2001: GCC 3.0.3 has been released.<br />
+February 20, 2002: GCC 3.0.4 has been released.<br />
 </p>
 
 <hr />
 
-<h1>GCC 3.0.3</h1>
+<h1>GCC 3.0.4</h1>
 
-<p>December 20, 2001</p>
+<p>February 20, 2001</p>
 
 <p>The <a href="http://www.gnu.org/">GNU project</a> and the GCC
-developers are pleased to announce the release of GCC 3.0.3, which is
-a bug-fix release following GCC 3.0.2 released on October 25, 2001,
-GCC 3.0.1 released on August 20, 2001, and GCC 3.0 released on June
-18, 2001.
+developers are pleased to announce the release of GCC 3.0.4, which is
+a bug-fix release for the GCC 3.0 series.
 </p>
 
 <p>GCC used to stand for the GNU C Compiler, but since the compiler
