--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -20,6 +20,13 @@ archived mail messages that reported the builds.</p>
 </tr>
 
 <tr>
+<td>alpha-dec-osf4.0e</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01142.html">3.0.2</a></td>
+</tr>
+
+<tr>
 <td>alpha-dec-osf4.0f</td>
 <td>&nbsp;</td>
 <td>Successful:
@@ -517,6 +524,13 @@ Successful with modifications:
 <td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.13</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-10/msg01528.html">3.0.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.17</td>
+<td>Successful (C, C++, ObjC):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01140.html">3.0.3</a></td>
 </tr>
 
 <tr>
