--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -521,6 +521,13 @@ Successful with modifications:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.9</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01188.html">3.0.4</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.13</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-10/msg01528.html">3.0.2</a></td>
