--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -429,6 +429,13 @@ Successful with modifications:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Debian 3.0, kernel 2.4.17</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01195.html">3.0.4</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Mandrake 8.0, glibc 2.2.4</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00895.html">3.0.1</a></td>
