--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -429,7 +429,7 @@ Successful with modifications:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Debian 3.0, kernel 2.4.17</td>
+<td>Debian 3.0, kernel 2.4.17, glibc 2.2.5</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01195.html">3.0.4</a></td>
 </tr>
