Add:   i686-pc-cygwin (Cygwin-1.3.9 on Windows NT v4.0) for 3.0.4   i686-pc-linux-gnu (Red Hat 6.0, glibc 2.1.3, kernel 2.4.16) for 3.0.4   powerpc-ibm-aix5.1.0.0 for 3.0.3

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -412,6 +412,13 @@ Successful with modifications:
 </tr>
 
 <tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin-1.3.9 on Windows NT v4.0</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01316.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu</td>
 <td>Caldera 2.4, glibc 2.1.2</td>
 <td>Successful:
@@ -429,7 +436,7 @@ Successful with modifications:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Debian 3.0, kernel 2.4.17, glibc 2.2.5</td>
+<td>Debian 3.0, glibc 2.2.5, kernel 2.4.17</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01195.html">3.0.4</a></td>
 </tr>
@@ -461,6 +468,13 @@ Successful with modifications:
 <td>Mandrake 8.1, glibc 2.2.4, kernel 2.4.17</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01332.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 6.0, glibc 2.1.3, kernel 2.4.16</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01273.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -675,6 +689,13 @@ Successful with modifications:
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00647.html">3.0.1</a></td>
+</tr>
+
+<tr>
+<td>powerpc-ibm-aix5.1.0.0</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01302.html">3.0.3</a></td>
 </tr>
 
 <tr>
