--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -419,6 +419,13 @@ Successful with modifications:
 </tr>
 
 <tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin-1.3.9 on Windows 2000 5.0</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01336.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu</td>
 <td>Caldera 2.4, glibc 2.1.2</td>
 <td>Successful:
@@ -666,7 +673,9 @@ Successful with modifications:
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00973.html">3.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00316.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00316.html">3.0.3</a>;
+Successful (C,C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01343.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -786,7 +795,9 @@ Successful with modifications:
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00941.html">3.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01021.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01173.html">3.0.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00289.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00289.html">3.0.3</a>;
+Successful (C,C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01343.html">3.0.4</a></td>
 </tr>
 
 <tr>
