--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -785,7 +785,8 @@ Successful (C,C++):
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00973.html">3.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00275.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00275.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01345.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -795,7 +796,8 @@ Successful (C,C++):
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00941.html">3.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01021.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01173.html">3.0.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00289.html">3.0.3</a>;
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00289.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01345.html">3.0.4</a>;
 Successful (C,C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01343.html">3.0.4</a></td>
 </tr>
