--- a/htdocs/releasing.html
+++ b/htdocs/releasing.html
@@ -20,6 +20,18 @@ release.</li>
 <li>For a new major release, ensure that the build status page is
 present.</li>
 
+<li>Roll the release using the
+<code>maintainer-scripts/gcc_release</code> script.  You must pass the
+<code>-f</code> option, to indicate a final release, the
+<code>-r</code> option (for example, <code>-r 3.1</code>), to give the
+release version, and, if diffs against a previous release are to be
+generated, the <code>-p</code> option, whose argument must name the
+<code>.tar.gz</code> file for a previous release, in a directory
+containing all the <code>.tar.gz</code> files for that previous
+release (for example, <code>-p
+/some/where/gcc-3.1/gcc-3.1.tar.gz</code>, where there are also files
+such as <code>/some/where/gcc-3.1/gcc-core-3.1.tar.gz</code>).</li>
+
 <li>Update the <code>releases.html</code> web page.</li>
 
 <li>Update the version numbers of the current and future releases on
