--- a/htdocs/htdig/footer.html
+++ b/htdocs/htdig/footer.html
@@ -1,6 +1,6 @@
 $(PAGEHEADER)
 $(PREVPAGE) $(PAGELIST) $(NEXTPAGE)
-<hr noshade size=4>
+<hr noshade="noshade" size="4" />
 <a href="http://www.htdig.org">
-<img src="/htdig/htdig.jpeg" border=0>ht://Dig $(VERSION)</a>
+<img src="/htdig/htdig.jpeg" alt="ht://Dig" border="0" />ht://Dig $(VERSION)</a>
 </body></html>
