--- a/htdocs/htdig/header.html
+++ b/htdocs/htdig/header.html
@@ -1,26 +1,25 @@
 <html><head><title>Search results for '$(WORDS)'</title></head>
 <body bgcolor="#eef7ff">
-<h2><img src="/htdig/htdig.jpeg">
+<h2><img src="/htdig/htdig.jpeg" border="0" alt="ht://Dig" />
 Search results for '$(LOGICAL_WORDS)'</h2>
-<hr noshade size=4>
+<hr noshade="noshade" size="4" />
 <form method="get" action="$(CGI)">
-<font size=-1>
-<input type=hidden name=config value=$(CONFIG)>
-<input type=hidden name=restrict value="$(RESTRICT)">
-<input type=hidden name=exclude value="$(EXCLUDE)">
+<font size="-1">
+<input type="hidden" name="config" value="$(CONFIG)" />
+<input type="hidden" name="restrict" value="$(RESTRICT)" />
+<input type="hidden" name="exclude" value="$(EXCLUDE)" />
 Match: $(METHOD)
 Format: $(FORMAT)
 Sort by: $(SORT)
-<br>
+<br />
 Refine search:
-<input type="text" size="30" name="words" value="$(WORDS)">
-<input type="submit" value="Search">
-</select>
+<input type="text" size="30" name="words" value="$(WORDS)" />
+<input type="submit" value="Search" />
 <a href="/search.html#syntax">Search-syntax</a>
 </font>
 </form>
-<hr noshade size=1>
+<hr noshade="noshade" size="1" />
 <b>Documents $(FIRSTDISPLAYED) - $(LASTDISPLAYED) of $(MATCHES) matches.
-More <img src="/htdig/star.png" alt="*">'s indicate a better match.
+More <img src="/htdig/star.png" alt="*" />'s indicate a better match.
 </b>
-<hr noshade size=1>
+<hr noshade="noshade" size="1" />
