Update link: ftp://ftp.iij.ad.jp/pub/gcc/

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -39,7 +39,7 @@ sites</a>.</p>
 <li>Japan: <a href="ftp://ftp.dti.ad.jp/pub/lang/gcc/">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!</li>
 <li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs/">ftp.eos.hokudai.ac.jp</a></li>
 <li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs/">ftp.lab.kdd.co.jp</a></li>
-<li>Japan: <a href="ftp://ftp.iij.ad.jp/pub/egcs/">ftp.iij.ad.jp</a></li>
+<li>Japan: <a href="ftp://ftp.iij.ad.jp/pub/gcc/">ftp.iij.ad.jp</a></li>
 <li>Japan: <a href="ftp://ring.aist.go.jp/pub/lang/egcs/">ring.aist.go.jp</a></li>
 <li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs/">ring.etl.go.jp</a></li>
 <li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs/">ring.crl.go.jp</a></li>
