Update link ftp://ftp.sunet.se/pub/gnu/gcc/

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -53,7 +53,7 @@ sites</a>.</p>
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs/">ftp.nc.orc.ru</a></li>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs/">linux.ihep.su</a></li>
 <li>South Africa: <a href="ftp://ftp.sun.ac.za/mirrorsites/sourceware.cygnus.com/pub/gcc/">ftp.sun.ac.za</a></li>
-<li>Sweden: <a href="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a></li>
+<li>Sweden: <a href="ftp://ftp.sunet.se/pub/gnu/gcc/">ftp.sunet.se</a></li>
 <li>Sweden: <a href="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a></li>
 <li>Sweden: <a href="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a></li>
 <li>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub3/CYGNUS/gcc/">ftp1.sinica.edu.tw</a></li>
