--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -28,34 +28,34 @@ sites</a>.</p>
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/GNU/gcc/">sunsite.mff.cuni.cz</a></li>
 <li>Finland: <a href="ftp://ftp.funet.fi/pub/mirrors/sourceware.cygnus.com/pub/gcc/">ftp.funet.fi</a></li>
 <li>France (releases only, no snapshots): <a href="ftp://ftp.ilog.fr/pub/Mirrors/gcc/">ftp.ilog.fr</a></li>
-<li>France (releases only, no snapshots): <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a></li>
+<li>France (releases only, no snapshots): <a href="ftp://ftp.lip6.fr/pub/gcc/">ftp.lip6.fr</a></li>
 <li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/gcc.gnu.org/gcc/">ftp.irisa.fr</a></li>
 <li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/egcs/">ftp.uvsq.fr</a></li>
-<li>France: <a href="ftp://ftp.grolier.fr/pub/egcs/">ftp.grolier.fr</a></li>
-<li>Germany (Berlin): <a href="ftp://ftp.fu-berlin.de/unix/languages/egcs/">ftp.fu-berlin.de</a>, thanks to <a href="mailto:leitner@math.fu-berlin.de">Felix von Leitner</a>!</li>
+<li>France: <a href="ftp://ftp.grolier.fr/pub/gcc/">ftp.grolier.fr</a></li>
+<li>Germany (Berlin): <a href="ftp://ftp.fu-berlin.de/unix/gnu/gcc/">ftp.fu-berlin.de</a>, thanks to <a href="mailto:leitner@math.fu-berlin.de">Felix von Leitner</a>!</li>
 <li>Germany: <a href="ftp://ftp.gwdg.de/pub/gnu/gcc/">ftp.gwdg.de</a></li>
 <li>Germany: <a href="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/gcc.gnu.org/pub/gcc/">ftp.mpi-sb.mpg.de</a></li>, thanks to <a href="mailto:ftpadmin@mpi-sb.mpg.de">ftpadmin</a>
-<li>Greece: <a href="ftp://ftp.ntua.gr/pub/gnu/egcs/">ftp.ntua.gr</a>,</li>
+<li>Greece: <a href="ftp://ftp.ntua.gr/pub/gnu/gcc/">ftp.ntua.gr</a>,</li>
 <li>Japan: <a href="ftp://ftp.dti.ad.jp/pub/lang/gcc/">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!</li>
-<li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs/">ftp.eos.hokudai.ac.jp</a></li>
-<li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs/">ftp.lab.kdd.co.jp</a></li>
+<li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/gcc/">ftp.eos.hokudai.ac.jp</a></li>
+<li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/gcc/">ftp.lab.kdd.co.jp</a></li>
 <li>Japan: <a href="ftp://ftp.iij.ad.jp/pub/gcc/">ftp.iij.ad.jp</a></li>
-<li>Japan: <a href="ftp://ring.aist.go.jp/pub/lang/egcs/">ring.aist.go.jp</a></li>
+<li>Japan: <a href="ftp://ring.aist.go.jp/pub/GNU/gcc/">ring.aist.go.jp</a></li>
 <li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs/">ring.etl.go.jp</a></li>
-<li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs/">ring.crl.go.jp</a></li>
-<li>Japan: <a href="ftp://core.ring.gr.jp/pub/lang/egcs/">core.ring.gr.jp</a></li>
-<li>Japan: <a href="ftp://ftp.ring.gr.jp/pub/lang/egcs/">ftp.ring.gr.jp</a></li>
-<li>Korea (Seoul): <a href="ftp://linux.sarang.net/mirror/development/compiler/egcs/">linux.sarang.net</a></li>
+<li>Japan: <a href="ftp://ring.crl.go.jp/pub/GNU/gcc/">ring.crl.go.jp</a></li>
+<li>Japan: <a href="ftp://core.ring.gr.jp/pub/GNU/gcc/">core.ring.gr.jp</a></li>
+<li>Japan: <a href="ftp://ftp.ring.gr.jp/pub/GNU/gcc/">ftp.ring.gr.jp</a></li>
+<li>Korea (Seoul): <a href="ftp://linux.sarang.net/pub/mirror/gnu/gnu/gcc/">linux.sarang.net</a></li>
 <li>Nijmegen, Netherlands: <a href="ftp://ftp.nluug.nl/mirror/languages/gcc">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!</li>
 <li>Norway: <a href="ftp://ftp.pvv.ntnu.no/pub/egcs/">ftp.pvv.ntnu.no</a></li>
-<li>Poland: <a href="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs/">ftp.task.gda.pl</a></li>
-<li>Poland (Warsaw): <a href="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a></li>
+<li>Poland: <a href="ftp://ftp.task.gda.pl/pub/gnu/gcc/">ftp.task.gda.pl</a></li>
+<li>Poland (Warsaw): <a href="ftp://sunsite.icm.edu.pl/pub/gnu/gcc/">sunsite.icm.edu.pl</a></li>
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs/">ftp.nc.orc.ru</a></li>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs/">linux.ihep.su</a></li>
 <li>South Africa: <a href="ftp://ftp.sun.ac.za/mirrorsites/sourceware.cygnus.com/pub/gcc/">ftp.sun.ac.za</a></li>
 <li>Sweden: <a href="ftp://ftp.sunet.se/pub/gnu/gcc/">ftp.sunet.se</a></li>
-<li>Sweden: <a href="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a></li>
-<li>Sweden: <a href="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a></li>
+<li>Sweden: <a href="ftp://ftp.lysator.liu.se/mirror/gnu/gcc/">ftp.lysator.liu.se</a></li>
+<li>Sweden: <a href="ftp://ftp.chl.chalmers.se/pub/gnu/gcc/">ftp.chl.chalmers.se</a></li>
 <li>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub3/CYGNUS/gcc/">ftp1.sinica.edu.tw</a></li>
 <li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a></li>
 <li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sources.redhat.com/pub/gcc/">ftp.mirror.ac.uk</a>, thanks to <a href="mailto:mirror@mirror.ac.uk">mirror@mirror.ac.uk</a></li>
