--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -30,7 +30,7 @@ sites</a>.</p>
 <li>France (releases only, no snapshots): <a href="ftp://ftp.ilog.fr/pub/Mirrors/gcc/">ftp.ilog.fr</a></li>
 <li>France (releases only, no snapshots): <a href="ftp://ftp.lip6.fr/pub/gcc/">ftp.lip6.fr</a></li>
 <li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/gcc.gnu.org/gcc/">ftp.irisa.fr</a></li>
-<li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/egcs/">ftp.uvsq.fr</a></li>
+<li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/gcc/">ftp.uvsq.fr</a></li>
 <li>France: <a href="ftp://ftp.grolier.fr/pub/gcc/">ftp.grolier.fr</a></li>
 <li>Germany (Berlin): <a href="ftp://ftp.fu-berlin.de/unix/gnu/gcc/">ftp.fu-berlin.de</a>, thanks to <a href="mailto:leitner@math.fu-berlin.de">Felix von Leitner</a>!</li>
 <li>Germany: <a href="ftp://ftp.gwdg.de/pub/gnu/gcc/">ftp.gwdg.de</a></li>
