--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -32,7 +32,9 @@ archived mail messages that reported the builds.</p>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00536.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00880.html">3.0.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00624.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00624.html">3.0.3</a>;
+Successful (C, C++, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01488.html">3.0.4</a></"td>
 </tr>
 
 <tr>
@@ -338,6 +340,13 @@ Successful (C):
 
 <tr>
 <td>i586-pc-linux-gnu</td>
+<td>Debian 3.0, glibc 2.2.5, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01385.html">3.0.4</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
 <td>Red Hat 7.0, glibc 2.1.92, kernel 2.2.16</td>
 <td>Successful (C, C++, ObjC, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01405.html">3.0.3</a></td>
@@ -423,6 +432,13 @@ Successful with modifications:
 <td>Cygwin-1.3.9 on Windows 2000 5.0</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01336.html">3.0.4</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin-1.3.9 on Windows XP Home Edition</td>
+<td>Successful (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01382.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -584,6 +600,13 @@ Successful with modifications:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Slackware 8.0, glibc 2.2.3, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01415.html">3.0.4</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Slackware 8.0, glibc 2.2.4, kernel 2.4.17</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00186.html">3.0.3</a></td>
@@ -673,7 +696,8 @@ Successful with modifications:
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00973.html">3.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00316.html">3.0.3</a>;
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00316.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01483.html">3.0.4</a>;
 Successful (C,C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01343.html">3.0.4</a></td>
 </tr>
@@ -726,6 +750,13 @@ Successful (C,C++):
 <td>Debian 3.0 (testing snapshot 20011231), glibc 2.2.4, kernel 2.4.16</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00016.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>SuSE 7.3, glibc 2.2.4, kernel 2.4.12</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01472.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -806,6 +837,13 @@ Successful (C,C++):
 <td>sparc-sun-solaris2.* (64 bits)</td>
 <td>Not supported</td>
 <td>&nbsp;</td>
+</tr>
+
+<tr>
+<td>vax-unknown-netbsd1.5.2</td>
+<td>&nbsp;</td>
+<td>Successful (C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01421.html">3.0.4</a></td>
 </tr>
 
 </table>
